--- a/pharmacy_pos_mobile/pubspec.yaml
+++ b/pharmacy_pos_mobile/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   freezed_annotation: ^2.4.1
 
   # UI & Responsive
-  responsive_framework: ^1.1.1
+  responsive_framework: ^1.5.1
   flutter_screenutil: ^5.9.0
   cached_network_image: ^3.3.0
 
@@ -88,9 +88,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -104,15 +103,15 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   # fonts:
-  #   - family: Schyler
+  #   - family: Manrope
   #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
+  #       - asset: fonts/Manrope-Light.ttf
+  #         weight: 300
+  #       - asset: fonts/Manrope-Regular.ttf
+  #         weight: 400
+  #       - asset: fonts/Manrope-Medium.ttf
+  #         weight: 500
+  #       - asset: fonts/Manrope-Bold.ttf
   #         weight: 700
   #
   # For details regarding fonts from package dependencies,
