feat: enhance backend API with better configuration
- Improve CORS handling for cross-origin requests
- Update Swagger documentation configuration
- Fix port configuration inconsistencies
- Enhance authentication and session management

--- a/backend/env.example
+++ b/backend/env.example
@@ -1,12 +1,18 @@
 # Database
-DATABASE_URL="file:./dev.db"
+DATABASE_URL="postgresql://postgres:postgres123@localhost:5432/pharmacy_pos?schema=public"
 
-# JWT Secret
-JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
+# Redis
+REDIS_URL="redis://localhost:6379"
 
-# Server Configuration
-PORT=3001
-NODE_ENV=development
+# JWT
+JWT_SECRET="your-super-secret-jwt-key-here"
 
-# CORS (set to false for production, true for development)
-CORS_ORIGIN=true
+# App
+NODE_ENV="development"
+PORT=3000
+
+# CORS
+CORS_ORIGIN="http://localhost:3000,http://localhost:3001,http://localhost:5173"
+CORS_CREDENTIALS="true"
+CORS_METHODS="GET,POST,PUT,DELETE,PATCH,OPTIONS"
+CORS_HEADERS="Content-Type,Authorization,X-Requested-With"
