--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,17 +18,19 @@
     "typescript": "^5.3.0"
   },
   "dependencies": {
+    "@elysiajs/eden": "^1.4.1",
     "@nuxtjs/tailwindcss": "^6.10.0",
     "@pinia/nuxt": "^0.5.0",
     "@vueuse/nuxt": "^10.5.0",
-    "pinia": "^2.1.0",
-    "vue": "^3.3.0",
-    "vue-router": "^4.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-vue-next": "^0.294.0",
+    "pinia": "^2.1.0",
+    "quagga": "^0.12.1",
     "radix-vue": "^1.2.0",
     "tailwind-merge": "^2.0.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vue": "^3.3.0",
+    "vue-router": "^4.2.0"
   }
 }
