--- a/backend/package.json
+++ b/backend/package.json
@@ -25,15 +25,19 @@
         "@elysiajs/jwt": "^0.8.0",
         "@elysiajs/swagger": "^0.8.5",
         "@prisma/client": "^5.7.0",
+        "argon2": "^0.31.2",
         "bcryptjs": "^2.4.3",
         "dotenv": "^17.2.2",
         "elysia": "^0.8.17",
+        "elysia-rate-limit": "^4.4.0",
         "redis": "^5.8.2",
+        "validator": "^13.11.0",
         "zod": "^3.22.4"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.6",
         "@types/node": "^20.19.13",
+        "@types/validator": "^13.11.7",
         "bun-types": "latest",
         "prisma": "^5.7.0"
     },
