--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,6 @@
     },
     "dependencies": {
         "@elysiajs/cors": "^0.8.0",
-        "@elysiajs/eden": "^1.4.1",
         "@elysiajs/jwt": "^0.8.0",
         "@elysiajs/swagger": "^0.8.5",
         "@prisma/client": "^5.7.0",
@@ -32,6 +31,7 @@
         "elysia-rate-limit": "^4.4.0",
         "redis": "^5.8.2",
         "validator": "^13.11.0",
+        "winston": "^3.18.3",
         "zod": "^3.22.4"
     },
     "devDependencies": {
